fixed spacing with circle, vertical bar, and black triangle.

--- a/src/components/Splash/Splash.css
+++ b/src/components/Splash/Splash.css
@@ -63,21 +63,24 @@
 
 #splash__verticals {
     position: absolute;
+    top: -2.5vh;
     left: 65%;
-    height: 100%;
+    height: 103.5vh;
     display: flex;
     justify-content: center;
+    z-index: 1;
 }
 
 #splash__vertbar {
-    width: 20px;
+    position: absolute;
+    padding: 0 1.5vh;
     height: 100%;
     background-color: var(--accent-1);
 }
 
 #splash__circle {
     position: absolute;
-    top: 46%;
+    top: 51.5vh;
     width: 14vh;
     height: 14vh;
     background-color: var(--accent-3);
@@ -94,7 +97,6 @@
     height: 0;
     border-left: 50vw solid transparent;
     border-bottom: 50vh solid var(--accent-2);
-    z-index: -1;
 }
 
 #splash__triangle--2 {
@@ -109,7 +111,7 @@
 
 #splash__triangle--3 {
     position: absolute;
-    top: 27%;
+    top: 29vh;
     left: 67%;
     width: 0;
     height: 0;
